# recipe-box-for-wikijs

./: .gitignore  README.md  main.py  pyproject.toml  recipe_box.py
src/: recipe_box.py
src/utils/: fileio.py  scraper.py  wikijs.py
