[project]
name = "recipe-box-for-wikijs"
authors = [{ name = "Sayantan Santra", email = "sayantan.santra689@gmail.com" }]
license = "MIT"
classifiers = ["Programming Language :: Python :: 3"]
version = "1.2.2"
description = "Download recipes into a (repurposed Zettelkasten) recipe box"
readme = "README.md"
keywords = ["recipe", "food", "recipe-box"]
requires-python = ">=3.10"
dependencies = ["recipe-scrapers", "requests", "httpx[http2]", "truststore"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[project.scripts]
recipe_box = "recipe_box:main"
