[project]
name = "recipe-box-for-wikijs"
authors = [{ name = "Sayantan Santra", email = "sayantan.santra689@gmail.com" }]
license = "MIT"
classifiers = ["Programming Language :: Python :: 3"]
version = "1.3.0"
description = "Download recipes into a (repurposed Zettelkasten) recipe box"
readme = "README.md"
keywords = ["recipe", "food", "recipe-box"]
requires-python = ">=3.10"
dependencies = ["recipe-scrapers>=15.6.0", "requests>=2.32.3", "httpx[http2]>=0.28.1", "truststore>=0.10.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[project.scripts]
recipe_box = "recipe_box:main"
