[project]
name = "recipe-box-for-wikijs"
authors = [{ name = "Sayantan Santra", email = "sayantan.santra689@gmail.com" }]
license = "MIT"
classifiers = ["Programming Language :: Python :: 3"]
version = "1.4.2"
description = "Download recipes into a (repurposed Zettelkasten) recipe box"
readme = "README.md"
keywords = ["recipe", "food", "recipe-box"]
requires-python = ">=3.10"
dependencies = [
    "recipe-scrapers>=15.11.0",
    "requests>=2.32.5",
    "httpx[http2]>=0.28.1",
    "truststore>=0.10.4",
    "dependency>=0.0.3",
    "prompt-toolkit>=3.0.52",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[project.scripts]
recipe_box = "recipe_box:main"

[project.urls]
homepage = "https://github.com/SinTan1729/recipe-box-for-wikijs"
